Correção de bug. Confirmar encontro.

--- a/web/denuncias.xhtml
+++ b/web/denuncias.xhtml
@@ -181,7 +181,7 @@
                                                                     <label style="font-size: 14px;color: black; padding-left: 10px;">
                                                                         Imagem:
                                                                     </label>
-                                                                    <h:inputFile class="form-control" style="font-size: 14px; color: black; margin-left: 10px;"/>
+                                                                    <h:inputFile class="form-control" value="#{denunciaBean.imagem}" style="font-size: 14px; color: black; margin-left: 10px;"/>
                                                                 </h:panelGrid>
                                                             </div>
                                                             <div class="col-md-1">
