--- a/web/buscarDenuncia.xhtml
+++ b/web/buscarDenuncia.xhtml
@@ -70,7 +70,7 @@
                                                     <div class="col-md-1">
                                                     </div>
                                                     <div class="col-md-5">
-                                                        <img src="imagens/gato1.png" alt="Foto da Denúncia" style="width:100%; height:250px;border-radius: 0px;"/>
+                                                        <img src="#{denuncia.fotoDenuncia}" alt="Foto da Denúncia" style="width:100%; height:250px;border-radius: 0px;"/>
                                                     </div>
                                                     <div class="col-md-5">
                                                         <div align="left">
@@ -165,33 +165,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-
-
-        <!-- Paginação -->
-        <div align="center">
-            <nav aria-label="...">
-                <ul class="pagination">
-                    <li class="page-item disabled">
-                        <a class="page-link" href="#" tabindex="-1" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                    </li>
-                    <li class="page-item active">
-                        <a class="page-link" href="#">1 <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="page-item" style="color: red; background-color: red;"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
         </div>
 
     </h:body>
