--- a/web/meusEncontros.xhtml
+++ b/web/meusEncontros.xhtml
@@ -62,12 +62,13 @@
                                     <th></th>
                                 </tr>
                                 <c:forEach var="encontro" items="#{encontroBean.encontros}">
+                                    <c:set var="qtd" value="#{qtd+1}"/>
                                     <tr>
-                                        <td>1</td>
+                                        <td>#{qtd}</td>
                                         <td>#{encontro.animal.responsavel.nomeUsuario}</td>
                                         <td>#{encontro.animal.nomeAnimal}</td>
                                         <td>#{encontro.adotante.nomeUsuario}</td>
-                                        <td>#{encontro.statusEncontro}</td>
+                                        <td>#{encontro.isStatusEncontro()}</td>
                                         <h:form>
                                             <td><h:commandLink action="#{encontroBean.VerEncontro(encontro)}" value="VER MAIS" class="btn btn-primary btn-sm" style="border-radius: 0px;" /></td>
                                             <td><h:commandLink action="#{encontroBean.ExcluirEncontro(encontro)}" value="EXCLUIR" class="btn btn-danger btn-sm" style="border-radius: 0px;" /></td>
