Correção de bug. Adição de alguns filtros.

--- a/web/editarAnuncio.xhtml
+++ b/web/editarAnuncio.xhtml
@@ -64,7 +64,7 @@
                                                 <div class="text-center" >
                                                     <img src="#{anuncioBean.anuncio.fotoAnuncio}" height="120px" width="160px" style="border-radius: 0px;" alt="Foto do anúncio"/>
                                                     <h6>Atualizar foto...</h6>
-                                                    <h:inputText   class="text-center center-block well well-sm"/>
+                                                    <h:inputFile value="#{anuncioBean.imagem}" class="text-center center-block well well-sm" />
                                                 </div>
                                             </div>
                                             <div class="col-md-12">
