--- a/web/buscarAnimal.xhtml
+++ b/web/buscarAnimal.xhtml
@@ -33,7 +33,7 @@
 
         <!-- Título da página -->
         <div style="margin-top: 4%; height: 100px; background-color: #ffa812;" align="center">
-            <h3 align="center" style="color: white; padding-top:  20px;">Animais para adoção</h3>
+            <h3 align="center" style="color: white; padding-top:  20px;">Animais</h3>
             <hr style="margin-left: 10px; margin-right: 20px;"/>
         </div>
 
@@ -73,7 +73,6 @@
 
 
         <!-- Área de pesquisa -->
-
         <div id="container-floating">
 
             <div id="floating-button" style="background-color: #ffa812;">
@@ -84,10 +83,7 @@
 
         </div>
 
-
-
         <!-- Formulário -->
-
         <div class="modal fade" id="pesquisa" role="dialog">
             <div class="modal-dialog">
 
@@ -110,63 +106,31 @@
                                         </label>
                                     </div>
                                     <div class="col-md-10">
-                                        <h:selectOneMenu value="#" style="width: 100%; font-size: 14px; color: black;" class="form-control">
-                                            <f:selectItem itemLabel="Espécie 1" itemValue="1"/>
-                                            <f:selectItem itemLabel="Espécie 2" itemValue="2"/>
-                                            <f:selectItem itemLabel="Espécie 3" itemValue="3"/>
-                                            <f:selectItem itemLabel="Espécie 4" itemValue="4"/>
-                                            <f:selectItem itemLabel="Espécie 5" itemValue="5"/>
-
+                                        <h:selectOneMenu value="#{animalBean.especie}" valueChangeListener="#{animalBean.filtrarEspecie}" style="width: 100%; font-size: 14px; color: black;" class="form-control">
+                                            <f:selectItem itemLabel="Todas" itemValue="Todas"/>
+                                            <f:selectItem itemLabel="Cachorro" itemValue="Cachorro"/>
+                                            <f:selectItem itemLabel="Gato" itemValue="Gato"/>
+                                            <f:selectItem itemLabel="Outra" itemValue="Outra"/>
                                         </h:selectOneMenu>
                                     </div>
 
-
                                     <div class="col-md-2" align="left">
                                         <label style="font-size: 14px;color: black; padding-left: 10px;">
-                                            Idade:  
+                                            Tipo:  
                                         </label>
                                     </div>
                                     <div class="col-md-10">
-                                        <h:selectOneMenu value="#" style="width: 100%; font-size: 14px; color: black;" class="form-control">
-                                            <f:selectItem itemLabel="0-6 meses" itemValue="1"/>
-                                            <f:selectItem itemLabel="6-12 meses" itemValue="2"/>
-                                            <f:selectItem itemLabel="1-2 anos" itemValue="3"/>
-                                            <f:selectItem itemLabel="2-5 anos" itemValue="4"/>
-                                            <f:selectItem itemLabel="Mais de 5 anos" itemValue="5"/>
-                                        </h:selectOneMenu>
-                                    </div>
-
-
-                                    <div class="col-md-2" align="left">
-                                        <label style="font-size: 14px;color: black; padding-left: 10px;">
-                                            Raça:  
-                                        </label>
-                                    </div>
-                                    <div class="col-md-10">
-                                        <h:selectOneMenu value="#" style="width: 100%; font-size: 14px; color: black;" class="form-control">
-                                            <f:selectItem itemLabel="Raça 1" itemValue="1"/>
-                                            <f:selectItem itemLabel="Raça 2" itemValue="2"/>
-                                            <f:selectItem itemLabel="Raça 3" itemValue="3"/>
-                                            <f:selectItem itemLabel="Raça 4" itemValue="4"/>
-                                        </h:selectOneMenu>
-                                    </div>
-
-
-                                    <div class="col-md-2" align="left">
-                                        <label style="font-size: 14px;color: black; padding-left: 10px;">
-                                            Sexo:  
-                                        </label>
-                                    </div>
-                                    <div class="col-md-10">
-                                        <h:selectOneMenu value="#" style="width: 100%; font-size: 14px; color: black;" class="form-control">
-                                            <f:selectItem itemLabel="Macho" itemValue="1"/>
-                                            <f:selectItem itemLabel="Fêmea" itemValue="2"/>
+                                        <h:selectOneMenu value="#{animalBean.tipo}" valueChangeListener="#{animalBean.filtrarTipo}" style="width: 100%; font-size: 14px; color: black;" class="form-control">
+                                            <f:selectItem itemLabel="Todos" itemValue="Todos"/>
+                                            <f:selectItem itemLabel="Adoção" itemValue="Adoção"/>
+                                            <f:selectItem itemLabel="Perdido" itemValue="Perdido"/>
+                                            <f:selectItem itemLabel="Resgate" itemValue="Resgate"/>
                                         </h:selectOneMenu>
                                     </div>
 
                                     <div class="col-md-12">
                                         <br/>
-                                        <button class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px; width: 100%;" data-dismiss="modal">Pesquisar</button>
+                                        <h:commandLink action="#{animalBean.Filtrar()}" class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px; width: 100%;" >Pesquisar</h:commandLink>
                                         <br/>
                                     </div>
                                 </div>
@@ -178,35 +142,6 @@
                 </div>
             </div>
         </div>
-
-
-        <!-- Paginação -->
-        <div align="center">
-            <nav aria-label="...">
-                <ul class="pagination">
-                    <li class="page-item disabled">
-                        <a class="page-link" href="#" tabindex="-1" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                    </li>
-                    <li class="page-item active">
-                        <a class="page-link" href="#">1 <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="page-item" style="color: red; background-color: red;"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-
-
-
     </h:body>
 </html>
 
