--- a/web/buscarAnuncio.xhtml
+++ b/web/buscarAnuncio.xhtml
@@ -51,11 +51,10 @@
                             <img src="#{anuncio.fotoAnuncio}" alt="Foto do Anúncio" style="width:100%; height:170px; border-radius: 0px;"/>
                             <div class="caption" align="center">
                                 <h5>#{anuncio.tituloAnuncio}</h5>
-                                <p><a href="#" class="btn btn-default" data-toggle="modal" data-target="#myModal1" style="background-color: #1E90FF; color: white;border-radius: 0px;width: 100%;"><span class="glyphicon glyphicon-plus"></span><span></span>Ver Mais</a></p>
+                                <p><a href="#" class="btn btn-default" data-toggle="modal" data-target="#myModal#{anuncio.idAnuncio}" style="background-color: #1E90FF; color: white;border-radius: 0px;width: 100%;"><span class="glyphicon glyphicon-plus"></span><span></span>Ver Mais</a></p>
 
-                                <!-- Detalhamento da anúncio 1 -->
-
-                                <div class="modal fade" id="myModal1" role="dialog">
+                                <!-- Detalhamento da anúncio -->
+                                <div class="modal fade" id="myModal#{anuncio.idAnuncio}" role="dialog">
                                     <div class="modal-dialog">
 
                                         <!-- Conteúdo -->
@@ -71,11 +70,11 @@
                                                         <div class="col-md-1">
                                                         </div>
                                                         <div class="col-md-5">
-                                                            <img src="imagens/anuncio.jpg" alt="Foto do Anúncio" style="width:100%; height:250px;border-radius: 0px;"/>
+                                                            <img src="#{anuncio.fotoAnuncio}" alt="Foto do Anúncio" style="width:100%; height:250px;border-radius: 0px;"/>
                                                         </div>
                                                         <div class="col-md-5">
                                                             <div align="left">
-                                                                <p>#{anuncio.tipoAnuncio}</p>
+                                                                <p>Tipo: #{anuncio.tipoAnuncio}</p>
                                                                 <p>#{anuncio.descricaoAnuncio}</p>
                                                             </div>
                                                         </div>
@@ -100,97 +99,6 @@
             </div>
         </div>
 
-
-
-
-
-
-
-
-
-
-        <!-- Área de pesquisa -->
-
-        <div id="container-floating">
-
-            <div id="floating-button" style="background-color: #1E90FF;">
-                <a href="#" data-toggle="modal" data-target="#pesquisa" >
-                    <i class="material-icons" style="color: white; margin-top: 17px; margin-left: 15px;"> search</i>
-                </a>
-            </div>
-
-        </div>
-
-
-
-        <!-- Formulário -->
-
-        <div class="modal fade" id="pesquisa" role="dialog">
-            <div class="modal-dialog">
-
-                <!-- Conteúdo -->
-                <div class="modal-content">
-                    <div class="modal-header" align="center">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Busca</h4>
-                        <hr/>
-                        <h5>Busque por uma denúncia específica</h5>
-                    </div>
-                    <div class="modal-body">
-                        <h:form>
-                            <div class="col-md-12">
-                                <div class="row">
-
-                                    <div class="col-md-2" align="left">
-                                        <label style="font-size: 14px;color: black; padding-left: 10px;">
-                                            Nome:  
-                                        </label>
-                                    </div>
-                                    <div class="col-md-10">
-                                        <h:inputText class="form-control" style="width: 100%;font-size: 14px;"/>
-                                    </div>
-
-                                    <div class="col-md-12">
-                                        <br/>
-                                        <button class="btn btn-default" style="background-color: #1E90FF; color: white;border-radius: 0px; width: 100%;" data-dismiss="modal">Pesquisar</button>
-                                        <br/>
-                                    </div>
-                                </div>
-                            </div>
-                        </h:form>
-                    </div>
-                    <div class="modal-footer">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-
-        <!-- Paginação -->
-        <div align="center">
-            <nav aria-label="...">
-                <ul class="pagination">
-                    <li class="page-item disabled">
-                        <a class="page-link" href="#" tabindex="-1" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                    </li>
-                    <li class="page-item active">
-                        <a class="page-link" href="#">1 <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="page-item" style="color: red; background-color: red;"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
 
     </h:body>
 </html>
