--- a/web/buscarEvento.xhtml
+++ b/web/buscarEvento.xhtml
@@ -47,7 +47,7 @@
                                 <h5>#{evento.nomeEvento}</h5>
                                 <div align="left">
                                     <p>Data: #{evento.dataEvento}</p>
-                                    <p>Local: </p>
+                                    <p>Local: #{evento.getlocalizacao()} </p>
                                 </div>
                                 <p><a href="#" class="btn btn-default" data-toggle="modal" data-target="##{evento.idEvento}" style="background-color: #87CEFF; color: white;border-radius: 0px;width: 100%;"><span class="glyphicon glyphicon-plus"></span><span></span>Ver Mais</a></p>
 
@@ -96,127 +96,10 @@
                     </div>
                 </c:forEach>
 
-                <!-- Área de pesquisa -->
-
-                <div id="container-floating">
-
-                    <div id="floating-button" style="background-color: #87CEFF;">
-                        <a href="#" data-toggle="modal" data-target="#pesquisa" >
-                            <i class="material-icons" style="color: white; margin-top: 17px; margin-left: 15px;"> search</i>
-                        </a>
-                    </div>
-
-                </div>
-
-
-
-                <!-- Formulário -->
-
-                <div class="modal fade" id="pesquisa" role="dialog">
-                    <div class="modal-dialog">
-
-                        <!-- Conteúdo -->
-                        <div class="modal-content">
-                            <div class="modal-header" align="center">
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h4 class="modal-title">Busca</h4>
-                                <hr/>
-                                <h5>Busque por um evento específico</h5>
-                            </div>
-                            <div class="modal-body">
-                                <h:form>
-                                    <div class="col-md-12">
-                                        <div class="row">
-
-                                            <div class="col-md-2" align="left">
-                                                <label style="font-size: 14px;color: black; padding-left: 10px;">
-                                                    Estado:  
-                                                </label>
-                                            </div>
-                                            <div class="col-md-10">
-                                                <h:selectOneMenu value="#" style="height: 30px; color: black;font-size: 14px;" class="form-control">
-                                                    <f:selectItem itemLabel="Alagoas" itemValue="al"/>
-                                                    <f:selectItem itemLabel="Amapá" itemValue="ap"/>
-                                                    <f:selectItem itemLabel="Amazonas" itemValue="am"/>
-                                                    <f:selectItem itemLabel="Bahia" itemValue="ba"/>
-                                                    <f:selectItem itemLabel="Ceará" itemValue="ce"/>
-                                                    <f:selectItem itemLabel="Distrito Federal" itemValue="df"/>
-                                                    <f:selectItem itemLabel="Espírito Santo" itemValue="es"/>
-                                                    <f:selectItem itemLabel="Goiás" itemValue="go"/>
-                                                    <f:selectItem itemLabel="Maranhão" itemValue="ma"/>
-                                                    <f:selectItem itemLabel="Mato Grosso" itemValue="mt"/>
-                                                    <f:selectItem itemLabel="Mato Grosso do Sul" itemValue="ms"/>
-                                                    <f:selectItem itemLabel="Minas Gerais" itemValue="mg"/>
-                                                    <f:selectItem itemLabel="Pará" itemValue="pa"/>
-                                                    <f:selectItem itemLabel="Paraíba" itemValue="pb"/>
-                                                    <f:selectItem itemLabel="Paraná" itemValue="pr"/>
-                                                    <f:selectItem itemLabel="Pernambuco	" itemValue="pe"/>
-                                                    <f:selectItem itemLabel="Piauí" itemValue="pi"/>
-                                                    <f:selectItem itemLabel="Rio de Janeiro" itemValue="rj"/>
-                                                    <f:selectItem itemLabel="Rio Grande do Norte" itemValue="rn"/>
-                                                    <f:selectItem itemLabel="Rio Grande do Sul" itemValue="rs"/>
-                                                    <f:selectItem itemLabel="Rondônia" itemValue="ro"/>
-                                                    <f:selectItem itemLabel="Roraima" itemValue="rr"/>
-                                                    <f:selectItem itemLabel="Santa Catarina" itemValue="sc"/>
-                                                    <f:selectItem itemLabel="São Paulo" itemValue="sp"/>
-                                                    <f:selectItem itemLabel="Sergipe" itemValue="se"/>
-                                                    <f:selectItem itemLabel="Tocantins" itemValue="to"/>
-                                                </h:selectOneMenu>                                          
-                                            </div>
-                                            <div class="col-md-2" align="left">
-                                                <label style="font-size: 14px;color: black; padding-left: 10px;">
-                                                    Cidade:  
-                                                </label>
-                                            </div>
-                                            <div class="col-md-10">
-                                                <h:inputText class="form-control" style="width: 100%;font-size: 14px;"/>
-                                            </div>
-
-                                            <div class="col-md-12">
-                                                <br/>
-                                                <button class="btn btn-default" style="background-color: #87CEFF; color: white;border-radius: 0px; width: 100%;" data-dismiss="modal">Pesquisar</button>
-                                                <br/>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </h:form>
-                            </div>
-                            <div class="modal-footer">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
             </div>
         </div>
 
 
-
-        <!-- Paginação -->
-        <div align="center">
-            <nav aria-label="...">
-                <ul class="pagination">
-                    <li class="page-item disabled">
-                        <a class="page-link" href="#" tabindex="-1" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                    </li>
-                    <li class="page-item active">
-                        <a class="page-link" href="#">1 <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="page-item" style="color: red; background-color: red;"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
 
     </h:body>
 </html>
