--- a/web/experiencias.xhtml
+++ b/web/experiencias.xhtml
@@ -55,6 +55,7 @@
                         <h:form>
                             <p><h:commandLink action="#{experienciaBean.VerExperiencia(experiencia)}" value="Ver Mais" class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px;"/></p>
                         </h:form>
+                        
                         <hr/>
                     </c:forEach>
 
@@ -63,57 +64,44 @@
                 <!-- Lateral -->
                 <div class="col-md-4">
 
-                    <!-- Área de pesquisa -->
                     <br/><br/>
-                    <div class="well panel panel-default" align="center" style="background-color: #ffa812; height: 170px;">
-                        <h4 style="color: white;">Pesquisa</h4>
-                        <hr/>
-                        <div >
-                            <h:form>
-                                <h:panelGrid columns="2" cellpadding="5">
-                                    <h:inputText class="form-control" style="color: white;"/>
-                                    <a href="#"><i class="material-icons" style="color: white; margin-top: 17px; margin-left: 15px;"> search</i></a>
-                                </h:panelGrid>
-                            </h:form>
 
-                        </div>
-                    </div>
                     <!-- Categorias -->
-
                     <div class="well panel panel-default" align="center" style="background-color: #ffa812;">
                         <h4 style="color: white;">Categorias</h4>
                         <hr/>
                         <div class="row">
-                            <div class="col-lg-6" align="center" >
-                                <ul class="list-unstyled">
-                                    <li><a href="#" style="text-decoration: none;color: white;">Alimentação</a>
-                                    </li>
-                                    <li><a href="#" style="text-decoration: none;color: white;">Filhotes</a>
-                                    </li>
-                                    <li><a href="#" style="text-decoration: none;color: white;">Saude</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <!-- /.col-lg-6 -->
-                            <div class="col-lg-6" align="center">
-                                <ul class="list-unstyled">
-                                    <li><a href="#" style="text-decoration: none;color: white;">Comportamento</a>
-                                    </li>
-                                    <li><a href="#" style="text-decoration: none;color: white;">Idosos</a>
-                                    </li>
-                                    <li><a href="#" style="text-decoration: none;color: white;">Outro</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <!-- /.col-lg-6 -->
+                            <h:form>
+                                <div class="col-lg-6" align="center" >
+                                    <ul class="list-unstyled">
+                                        <li><h:commandLink action="#{experienciaBean.Filtrar('Alimentação')}" style="text-decoration: none;color: white;">Alimentação</h:commandLink>
+                                        </li>
+                                        <li><h:commandLink action="#{experienciaBean.Filtrar('Filhotes')}" style="text-decoration: none;color: white;">Filhotes</h:commandLink>
+                                        </li>
+                                        <li><h:commandLink action="#{experienciaBean.Filtrar('Saude')}" style="text-decoration: none;color: white;">Saude</h:commandLink>
+                                        </li>
+                                    </ul>
+
+                                </div>
+                                <div class="col-lg-6" align="center">
+                                    <ul class="list-unstyled">
+                                        <li><h:commandLink action="#{experienciaBean.Filtrar('Comportamento')}" style="text-decoration: none;color: white;">Comportamento</h:commandLink>
+                                        </li>
+                                        <li><h:commandLink action="#{experienciaBean.Filtrar('Idosos')}" style="text-decoration: none;color: white;">Idosos</h:commandLink>
+                                        </li>
+                                        <li><h:commandLink action="#{experienciaBean.Filtrar('Outro')}" style="text-decoration: none;color: white;">Outro</h:commandLink>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </h:form>
                         </div>
-                        <!-- /.row -->
                     </div>
 
                     <div class="well panel panel-default" align="center" style="background-color: #ffa812; color: white;">
                         <h4 style="color: white;">Espaço Helper</h4>
                         <hr/>
-                        <p>Vocês podem colocar um pequeno texto explicativo aqui!!!!!!</p>
+                        <p>Somos uma rede colaborativa de ajuda animal, dessa forma, precisamos que você contribua com o conteudo desse espaço!</p>
+                        <p>Sinta-se a vontade para compartilhar dicas de cuidados, curiosidades e o que mais você souber sobre o mundo animal</p>
                     </div>
 
                 </div>
